--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
-
-@import url('https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap');
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, and, address, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video, input, textarea, select {
 	background:transparent;
@@ -18,7 +17,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 body {
 	line-height:1;
-	font-family: "Protest Guerrilla", sans-serif;
+	font-family: "Handjet", sans-serif;
 }
 abbr[title], dfn[title] {
 	border-bottom:1px dotted;
@@ -61,4 +60,9 @@ ol, ul {
 table {
 	border-collapse:collapse;
 	border-spacing:0;
+}
+
+body {
+	background-color: rgb(194, 194, 194);
+	height: 100vh;
 }
