--- a/styles/menu.css
+++ b/styles/menu.css
@@ -10,6 +10,8 @@
     flex-direction: column;
     border: white;
     border-style: solid;
+    height: auto;
+    background-color: #C0C7C8;
 }
 
 .header {
@@ -26,9 +28,7 @@
 }
 
 .menu {
-    background-color: #C0C7C8;
-    padding: 20px;
-    height: 300px;
+    padding: 50px 20px;
     width: 300px;
     font-size: 20px;
 }
@@ -43,7 +43,7 @@ form {
 }
 
 .inputs {
-    margin-top: 40px;
+
     display: flex;
     flex-direction: column;
     row-gap: 20px;
@@ -63,7 +63,6 @@ form input {
 }
 
 
-  
 form input :focus {
     outline: none;
     border: 2px solid #000000;
@@ -73,7 +72,8 @@ form input :focus {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-end;    
+    margin: 30px 0px;
 }
 
 button {
