--- a/styles/menu.css
+++ b/styles/menu.css
@@ -37,7 +37,7 @@ form {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    height: 100%;
+    min-height: 100%;
     justify-content: space-between;
 
 }
@@ -69,7 +69,6 @@ form input :focus {
 }
 
 .btn {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;    
