--- a/styles/jogo.css
+++ b/styles/jogo.css
@@ -1,68 +1,74 @@
-body {
-    user-select: none;
-    border: 0;
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    width: 100vw;
+.tela-total {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.container {
-    display: grid;
-    height: 80vh;
-    width: 80vw;
-    transition: 020s;
+    min-width: 100%;
+    min-height: 100%;
+    justify-content: space-between;
 }
 
-@keyframes darken {
-    0% {filter: brightness(90%);}
-    50% {filter: brightness(80%);}
-    100% {filter: brightness(90%);}
+.jogo-atual {
+    flex-grow: 2;
+    display: flex;
+    flex-direction: column;
 }
 
-.tile {
-    margin: inherit;
-    align-self: center;
-    justify-self: center;
-    transition: 0.25s;
-    height: 100%;
-    width: 100%;
-    border: 1px solid black;
+.info-jogo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 20px 0;
+    background-color: #0000A8;
+    color: white;
 }
 
-.marked {
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position-x: center;
-    background-image: url("https://cdn-icons-png.flaticon.com/512/2374/2374819.png");
-    z-index: 2;
-}
-.covered {
-    background-color: rgb(95, 255, 47);
-    /*color: rgb(95, 255, 47);*/
-}
-.covered:hover {
-    animation-name: darken;
-    animation-duration: 2s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-.covered:active {
-    filter: brightness(80%);
-}
-
-.flipped {
-    background-color: rgb(255, 200, 47);
-    color: rgb(255, 200, 47);
-}
-.flipped:hover {
-    filter: brightness(90%);
-}
-.number {
+.jogo {
+    background-color: white;
+    flex-grow: 5; 
     text-align: center;
-    font-weight: bolder;    
-    display: grid;
-    align-items: center;
 }
+
+.jogo button {
+    margin: 10px 10px;
+}
+
+.historico {
+    flex-grow: 1;
+    background-color: rgb(128, 128, 128);
+    padding: 20px;   
+}
+
+.historico p {
+    text-align: left;
+    text-align: right;
+}
+
+.historico h3 {
+    margin: 10px 0;
+    font-size: 25px;
+    text-align: center;
+
+}
+
+.ultimos-jogos {
+    padding: 10px;
+    color: white;
+    background-color: rgba(255, 255, 255, 0.372);
+}
+
+button {
+    font-family: "Handjet", sans-serif;
+    font-size: 18px;
+    background-color: #C0C0C0;
+    color: black;
+    border: 2px solid #808080;
+    padding: 4px 8px;
+    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
+    cursor: pointer;
+    outline: none;
+}
+  
+button:active {
+    box-shadow: none;
+    border: 2px solid #000000;
+    background-color: #C0C0C0;
+}
+
