--- a/styles/menu.css
+++ b/styles/menu.css
@@ -68,6 +68,10 @@ form input :focus {
     border: 2px solid #000000;
 }
 
+form  input:disabled, select:disabled, textarea:disabled {
+    background-color: #0000006b;
+}
+
 .btn {
     display: flex;
     flex-direction: column;
