--- a/styles/ranking.css
+++ b/styles/ranking.css
@@ -7,19 +7,24 @@ h1 {
     font-size: 30px;
     margin-top: 40px;
     margin-bottom: 20px;
+    color: wheat;
 }
 .links {
     text-align: center;
     margin-bottom: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: right;
+    width: 90%;
+    gap: 30px;
 }
 
 .colocacoes table{
     width: 80%;
     margin: 0 auto;
     text-align: center;
+    border: 2px solid #808080;
+    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
 }
 
 table th {
