--- a/styles/index.css
+++ b/styles/index.css
@@ -70,11 +70,17 @@ body {
 }
 
 .btn {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;    
-    margin: 30px 0px;
+    font-family: "Handjet", sans-serif;
+    font-size: 18px;
+    background-color: #C0C0C0;
+    color: black;
+    border: 2px solid #808080;
+    padding: 4px 8px;
+    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
+    cursor: pointer;
+    outline: none;
 }
+
 
 .btn-envio {
     display: flex;
@@ -88,10 +94,11 @@ button {
     color: black;
     border: 2px solid #808080;
     padding: 4px 8px;
-    box-shadow: 2px 2px 0 #FFFFFF, -2px -2px 0 #000000;
+    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
     cursor: pointer;
     outline: none;
 }
+
   
 button:active {
     box-shadow: none;
@@ -104,4 +111,5 @@ button:active {
     justify-content: center;
     min-height: 100%;
 	align-items: center;
+	
 }
