--- a/styles/jogo.css
+++ b/styles/jogo.css
@@ -1,95 +1,63 @@
-.tela-total {
-    display: flex;
-    min-width: 100%;
-    min-height: 100%;
-    justify-content: space-between;
-}
-
 .jogo-atual {
-    flex-grow: 2;
+    flex-grow: 5;
     display: flex;
     flex-direction: column;
+    min-height: 100%;
 }
 
-.info-jogo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 20px 0;
-    background-color: #0000A8;
-    color: white;
-}
+    .info-jogo {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 20px 0;
+        background-color: #0000A8;
+        color: white;
+    }
 
-.jogo {
-    background-color: white;
-    flex-grow: 5; 
-    text-align: center;
-}
+    .jogo {
+        background-color: white;
+        text-align: center;
+    }
+        .campo-minado {
+            background-color: gray;
+            width: 500px;
+            height: 400px;
+            margin: 0 auto;
+        }
 
-.jogo button {
-    margin: 10px 10px;
-}
+        .jogo button {
+            margin: 10px 10px;
+        }
 
 .historico {
-    flex-grow: 1;
+    flex-grow: 0;
     background-color: #007F82;
     padding: 20px;   
 }
 
-.historico .links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    color: white;
-}
+    .historico .links {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        color: white;
+    }
 
-.historico p {
-    text-align: left;
-    text-align: right;
-}
+    .historico p {
+        text-align: left;
+        text-align: right;
+    }
 
-.historico h3 {
-    margin: 10px 0;
-    font-size: 25px;
-    text-align: center;
-    color: white;
+    .historico h3 {
+        margin: 10px 0;
+        font-size: 25px;
+        text-align: center;
+        color: white;
 
-}
+    }
 
-.ultimos-jogos {
-    padding: 10px;
-    color: white;
-    background-color: rgba(255, 255, 255, 0.372);
-    margin-top: 10px;
-}
-
-button {
-    font-family: "Handjet", sans-serif;
-    font-size: 18px;
-    background-color: #C0C0C0;
-    color: black;
-    border: 2px solid #808080;
-    padding: 4px 8px;
-    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
-    cursor: pointer;
-    outline: none;
-}
-
-  
-button:active {
-    box-shadow: none;
-    border: 2px solid #000000;
-    background-color: #C0C0C0;
-}
-
-.btn {
-    font-family: "Handjet", sans-serif;
-    font-size: 18px;
-    background-color: #C0C0C0;
-    color: black;
-    border: 2px solid #808080;
-    padding: 4px 8px;
-    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
-    cursor: pointer;
-    outline: none;
-}
+    .ultimos-jogos {
+        padding: 10px;
+        color: white;
+        background-color: rgba(255, 255, 255, 0.372);
+        margin-top: 10px;
+    }
