--- a/styles/jogo.css
+++ b/styles/jogo.css
@@ -1,8 +1,9 @@
+
 .jogo-atual {
     flex-grow: 5;
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    max-height: 100%;
 }
 
     .info-jogo {
@@ -55,9 +56,14 @@
 
 
 .historico {
-    flex-grow: 0;
     background-color: #007F82;
-    padding: 20px;   
+    padding: 20px; 
+    
+}
+
+.partidas-historico {
+    overflow-y: auto;
+    max-height: 400px;
 }
 
     .historico .links {
