--- a/styles/index.css
+++ b/styles/index.css
@@ -1,27 +1,119 @@
 @charset "utf-8";
 /* CSS Document */
-@import url('https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Handjet:wght@100..900&display=swap");
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, and, address, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, formulario, nav, output, ruby, section, summary, time, mark, audio, video, input, textarea, select {
-	background:transparent;
-	border:0;
-	font-size:100%;
-	margin:0;
-	outline:0;
-	padding:0;
-	vertical-align:baseline;
-    text-decoration: none;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+and,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+formulario,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video,
+input,
+textarea,
+select {
+  background: transparent;
+  border: 0;
+  font-size: 100%;
+  margin: 0;
+  outline: 0;
+  padding: 0;
+  vertical-align: baseline;
+  text-decoration: none;
 }
-article, aside, details, figcaption, figure, footer, header, hgroup, formulario, nav, section {
-	display:block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+formulario,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height:1;
-	font-family: "Handjet", sans-serif;
+  line-height: 1;
+  font-family: "Handjet", sans-serif;
 }
-abbr[title], dfn[title] {
-	border-bottom:1px dotted;
-	cursor:help;
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
 }
 /*blockquote, q {
 	quotes:none;
@@ -30,86 +122,86 @@ blockquote:before, blockquote:after, q:before, q:after {
 	content:none;
 }*/
 del {
-	text-decoration:line-through;
+  text-decoration: line-through;
 }
 hr {
-	background:transparent;
-	border:0;
-	clear:both;
-	color:transparent;
-	height:1px;
-	margin:0;
-	padding:0;
+  background: transparent;
+  border: 0;
+  clear: both;
+  color: transparent;
+  height: 1px;
+  margin: 0;
+  padding: 0;
 }
 mark {
-	background-color:#ffffb3;
-	font-style:italic
+  background-color: #ffffb3;
+  font-style: italic;
 }
-input, select {
-	vertical-align:middle;
+input,
+select {
+  vertical-align: middle;
 }
 ins {
-	background-color:red;
-	color:white;
-	text-decoration:none;
+  background-color: red;
+  color: white;
+  text-decoration: none;
 }
-ol, ul {
-	list-style:none;
-    text-decoration: none;
+ol,
+ul {
+  list-style: none;
+  text-decoration: none;
 }
 table {
-	border-collapse:collapse;
-	border-spacing:0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 body {
-	background-color: #007F82;
-	/*background-image: url('https://img.freepik.com/vetores-gratis/resumo-salpicado-de-plano-de-fundo-texturizado-aquarela_53876-2795.jpg?semt=ais_hybrid');
-	*/background-size: cover;
-	height: 100vh;
+  background-color: #007f82;
+  /*background-image: url('https://img.freepik.com/vetores-gratis/resumo-salpicado-de-plano-de-fundo-texturizado-aquarela_53876-2795.jpg?semt=ais_hybrid');
+	*/
+  background-size: cover;
+  height: 100vh;
 }
 
 .btn {
-    font-family: "Handjet", sans-serif;
-    font-size: 18px;
-    background-color: #C0C0C0;
-    color: black;
-	border: 2px solid #808080;
-    padding: 4px 8px;
-    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
-    cursor: pointer;
-    outline: none;
+  font-family: "Handjet", sans-serif;
+  font-size: 18px;
+  background-color: #c0c0c0;
+  color: black;
+  border: 2px solid #808080;
+  padding: 4px 8px;
+  box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
+  cursor: pointer;
+  outline: none;
 }
 
-
 .btn-envio {
-    display: flex;
-    justify-content: right;
+  display: flex;
+  justify-content: right;
 }
 
 button {
-    font-family: "Handjet", sans-serif;
-    font-size: 18px;
-    background-color: #C0C0C0;
-    color: black;
-    border: 2px solid #808080;
-    padding: 4px 8px;
-    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
-    cursor: pointer;
-    outline: none;
+  font-family: "Handjet", sans-serif;
+  font-size: 18px;
+  background-color: #c0c0c0;
+  color: black;
+  border: 2px solid #808080;
+  padding: 4px 8px;
+  box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
+  cursor: pointer;
+  outline: none;
 }
 
-  
 button:active {
-    box-shadow: none;
-    border: 2px solid #000000;
-    background-color: #C0C0C0;
+  box-shadow: none;
+  border: 2px solid #000000;
+  background-color: #c0c0c0;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
-    min-height: 100%;
-	align-items: center;
-	
+  display: flex;
+  justify-content: center;
+  min-height: 100%;
+  align-items: center;
 }
