--- a/styles/ranking.css
+++ b/styles/ranking.css
@@ -1,51 +1,51 @@
 body {
-    height: 100%;
+  height: 100%;
 }
 
 h1 {
-    text-align: center;
-    font-size: 30px;
-    margin-top: 40px;
-    margin-bottom: 20px;
-    color: wheat;
+  text-align: center;
+  font-size: 30px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  color: wheat;
 }
 .links {
-    text-align: center;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    width: 90%;
-    gap: 30px;
+  text-align: center;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  width: 90%;
+  gap: 30px;
 }
 
-.colocacoes table{
-    width: 80%;
-    margin: 0 auto;
-    text-align: center;
-    border: 2px solid #808080;
-    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
+.colocacoes table {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  border: 2px solid #808080;
+  box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
 }
 
 table th {
-    background-color: #0000A8;
-    color: white;
-    padding: 10px;
+  background-color: #0000a8;
+  color: white;
+  padding: 10px;
 }
 
 table td {
-    padding: 8px;
-    background-color: white;
+  padding: 8px;
+  background-color: white;
 }
 
 .btn {
-    font-family: "Handjet", sans-serif;
-    font-size: 18px;
-    background-color: #C0C0C0;
-    color: black;
-    border: 2px solid #808080;
-    padding: 4px 8px;
-    box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
-    cursor: pointer;
-    outline: none;
+  font-family: "Handjet", sans-serif;
+  font-size: 18px;
+  background-color: #c0c0c0;
+  color: black;
+  border: 2px solid #808080;
+  padding: 4px 8px;
+  box-shadow: 2px 2px 0 #3a3030, -2px -2px 0 #000000;
+  cursor: pointer;
+  outline: none;
 }
