ajustando arquitetura do projeto

--- a/app/view/jogo.html
+++ b/app/view/jogo.html
@@ -4,8 +4,8 @@
         <title>Campo Minado</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles/index.css">
-        <link rel="stylesheet" href="styles/jogo.css">
+        <link rel="stylesheet" href="../../assets/styles/index.css">
+        <link rel="stylesheet" href="../../assets/styles/jogo.css">
     </head>
     <body>
         <main class="container">
@@ -57,7 +57,7 @@
             </aside>
         </main>
         
-        <script src="./scripts/scripts.js"></script>
+        <script src="../../assets/scripts/scripts.js"></script>
         
     </body>
 </html> 
