--- a/app/view/editar-cadastro.html
+++ b/app/view/editar-cadastro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../assets/styles/index.css">
     <link rel="stylesheet" href="../../assets/styles/formulario.css">
-    <title>Campo minado</title>
+    <title>{{ title }}</title>
 </head>
 <body>
     <main class="container">
@@ -17,31 +17,31 @@
             <section class="formulario">
                 <h2>Editar conta</h2>
                 <br><br>
-                <form action="./jogo.html">
+                <form action="?url=EditarCadastro/salvar" method="POST">
                     <div class="inputs">
                         <div>
                             <label for="name">Nome completo:</label>
-                            <input id= "name" type="text" name="name" required>
+                            <input id="name" type="text" name="name" value="{{ usuario.nome }}" required>
                         </div>
                         <div>
                             <label for="data-nascimento">Data de nascimento:</label>
-                            <input id= "data-nascimento" type="date" name="name" disabled>
+                            <input id="data-nascimento" type="date" name="data_nascimento" value="{{ usuario.data_nascimento }}" disabled>
                         </div>
                         <div>
                             <label for="cpf">CPF:</label>
-                            <input id= "cpf" type="number" name="cpf" disabled>
+                            <input id="cpf" type="number" name="cpf" value="{{ usuario.cpf }}" disabled>
                         </div>
                         <div>
                             <label for="telefone">Telefone:</label>
-                            <input id= "telefone" type="text" name="telefone" required>
+                            <input id="telefone" type="text" name="telefone" value="{{ usuario.telefone }}" required>
                         </div>
                         <div>
                             <label for="e-mail">E-mail:</label>
-                            <input id= "e-mail" type="email" name="email" required>
+                            <input id="e-mail" type="email" name="email" value="{{ usuario.email }}" required>
                         </div>
                         <div>
                             <label for="username">Username:</label>
-                            <input id= "username" type="text" name="username" disabled>
+                            <input id="username" type="text" name="username" value="{{ usuario.username }}" disabled>
                         </div>
                         <div>
                             <label for="senha">Senha:</label>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="btn-envio">
-                        <button class="btn" type="submit">Salvar</button> 
+                        <button class="btn" type="submit">Salvar</button>
                     </div>
                 </form>
             </section>
