ajustando login e logout

--- a/app/view/jogo.html
+++ b/app/view/jogo.html
@@ -56,9 +56,9 @@
             </div>
             <br><br>
             <nav class="links" aria-label="Navegação">
-                <a href="./ranking.html" class="btn" aria-label="Ver ranking global">Ver ranking global</a>
-                <a href="./editar-cadastro.html" class="btn" aria-label="Editar informações">Editar informações</a>
-                <a href="./index.html" class="btn" aria-label="Sair">Sair</a>
+                <a href="?url=Ranking/index" class="btn" aria-label="Ver ranking global">Ver ranking global</a>
+                <a href=".?url=EditarCadastro/index" class="btn" aria-label="Editar informações">Editar informações</a>
+                <a href="?logout=true" class="btn" aria-label="Sair">Sair</a>
             </nav>
         </aside>
     </main>
