--- a/assets/styles/jogo.css
+++ b/assets/styles/jogo.css
@@ -56,6 +56,11 @@ input[type="number"] {
   padding: 20px;
 }
 
+.historico div {
+  background-color: white;
+  margin: 10px;
+}
+
 .partidas-historico {
   overflow-y: auto;
   max-height: 400px;
