--- a/app/view/index.html
+++ b/app/view/index.html
@@ -52,7 +52,7 @@
                         alert(data.message);
                     } else if (data.status === 'success') {
                         alert('Login bem-sucedido!');
-                        window.location.href = '?url=Jogo/index'; // Redireciona para a página do jogo
+                        window.location.href = '?url=Jogo/index';
                     }
                 })
                 .catch(error => {
